Release 4.0.0 (in development)
==============================

Dependencies
------------

* Drop python 3.5 support
* Drop docutils 0.12 and 0.13 support

Incompatible changes
--------------------

* #4826: py domain: The structure of python objects is changed.  A boolean value
  is added to indicate that the python object is canonical one

Deprecated
----------

* ``sphinx.directives.patches.CSVTable``
* ``sphinx.directives.patches.ListTable``
* ``sphinx.directives.patches.RSTTable``
* ``sphinx.util.pycompat.convert_with_2to3()``
* ``sphinx.util.pycompat.execfile_()``
* ``sphinx.util.smartypants``

Features added
--------------

* #4826: py domain: Add ``:canonical:`` option to python directives to describe
  the location where the object is defined
* #7830: Add debug logs for change detection of sources and templates

Bugs fixed
----------

Testing
--------

Release 3.2.0 (in development)
==============================

Dependencies
------------

Incompatible changes
--------------------

Deprecated
----------

Features added
--------------

* #7849: html: Add :confval:`html_codeblock_linenos_style` to change the style
  of line numbers for code-blocks
* #7853: C and C++, support parameterized GNU style attributes.
* #7888: napoleon: Add aliases Warn and Raise.
* C, added :rst:dir:`c:alias` directive for inserting copies
  of existing declarations.
* #7052: add ``:noindexentry:`` to the Python, C, C++, and Javascript domains.
  Update the documentation to better reflect the relationship between this option
  and the ``:noindex:`` option.

Bugs fixed
----------

* #7886: autodoc: TypeError is raised on mocking generic-typed classes
* #7839: autosummary: cannot handle umlauts in function names
* #7865: autosummary: Failed to extract summary line when abbreviations found
* #7866: autosummary: Failed to extract correct summary line when docstring
  contains a hyperlink target
* #4258: napoleon: decorated special methods are not shown