@@ -20,8 +20,9 @@ def test_relations(app, status, warning):
     assert app.builder.relations['bar/index'] == ['index', 'foo', 'bar/bar_1']
     assert app.builder.relations['bar/bar_1'] == ['bar/index', 'bar/index', 'bar/bar_2']
     assert app.builder.relations['bar/bar_2'] == ['bar/index', 'bar/bar_1', 'bar/bar_3']
-    assert app.builder.relations['bar/bar_3'] == ['bar/index', 'bar/bar_2', 'bar/bar_4/index']
-    assert app.builder.relations['bar/bar_4/index'] == ['bar/index', 'bar/bar_3', 'baz']
+    assert app.builder.relations['bar/bar_3'] == ['bar/index', 'bar/bar_2', 'bar/bar_10']
+    assert app.builder.relations['bar/bar_10'] == ['bar/index', 'bar/bar_3', 'bar/bar_4/index']
+    assert app.builder.relations['bar/bar_4/index'] == ['bar/index', 'bar/bar_10', 'baz']
     assert app.builder.relations['baz'] == ['index', 'bar/bar_4/index', 'qux/index']
     assert app.builder.relations['qux/index'] == ['index', 'baz', 'qux/qux_1']
     assert app.builder.relations['qux/qux_1'] == ['qux/index', 'qux/index', 'qux/qux_2']
